--- a/index.scss
+++ b/index.scss
@@ -1,5 +1,4 @@
 
-
 .navbar {
     font-family: Rockwell;
     display: flex;
@@ -13,6 +12,47 @@
       }
   }
 
+  .btn-bd-info {
+    --bs-btn-font-family: Rockwell;
+    --bs-btn-bg: #b15333;
+    --bs-btn-hover-color: #d7856a;
+    --bs-btn-color: white;
+  }
+
+  .divider {
+    display: flex;
+    background-color: #b15333;
+    position: auto;
+  }
+
+  .carousel {
+    background-color: #b15333;
+  }
   .carousel-item {
-    height: 420px;
+    height: 30%;
+  }
+
+  .chatterbox {
+    background-color: #b15333;
+    width: 100%;
+  }
+
+  .clearfix {
+    width: 80%;
+    position: relative;
+    margin: auto;
+    background-color: #b15333;
+    font-family: Century Schoolbook;
+    color: white;
+    font-style: italic;
+
+    h2 {
+      border: 3px solid white;
+      width: fit-content;
+      font-family: Rockwell;
+      padding: 10px;
+      font-weight: bold;
+      margin-left: 10px;
+      font-style: normal;
+    }
   }
