--- a/index.scss
+++ b/index.scss
@@ -4,7 +4,7 @@
     font-family: 'Lora', serif;
     color: white;
     font-style: italic;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 500;
     b {
       text-transform: uppercase;
@@ -56,6 +56,11 @@
     position: relative;
     margin: auto;
     background-color: #b15333;
+
+    video {
+      max-width: 500px;
+      border: 3px solid white;
+    }
     
 
     h2 {
